# paleae

./: .coveragerc  .gitignore  .paleaeignore  .ruff.toml  ACCESSIBILITY.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PHILOSOPHY.md  README.md  SECURITY.md  cosmic-ray.toml  cr.toml  cr_session.sqlite  index.html  paleae.py  pyproject.toml  repo_snapshot.json
.github/workflows/: ci.yml  release.yml
assets/: LICENSE.txt  ORIGIN.md  README.txt  site.webmanifest
docs/: API-Reference.md  Advanced-Usage.md  Configuration.md  Cookbook.md  FAQ.md  Getting-Started.md  Home.md  Integration-Guide.md  Output-Format.md  Philosophy.md  Troubleshooting.md  Usage-Guide.md  conf.py  index.rst  paleae.rst
examples/: CHALK.json  HTTPie.json  KUBERNETES_ONLY.json  Paleae.json  Résumé.json  paleae.json  paleae.wiki.json
milestones/: paleaelite.py  paleaeone.py  paleaepro.py
reports/: cosmic_ray.txt  coverage.json  junit.xml
tests/: conftest.py  test_paleae.py
